--- a/app/src/main/res/drawable/tv_stroke_yellow_sec.xml
+++ b/app/src/main/res/drawable/tv_stroke_yellow_sec.xml
@@ -4,12 +4,14 @@
 
     <!-- android:radius 弧形的半径 -->
     <corners android:radius="@dimen/d2" />
-    <!-- padding：Button里面的文字与Button边界的间隔 -->
-    <!--<padding-->
-        <!--android:bottom="@dimen/d5"-->
-        <!--android:left="@dimen/d10"-->
-        <!--android:right="@dimen/d10"-->
-        <!--android:top="@dimen/d5" />-->
+    <!-- padding：Button里面的文字与Button边界的间隔
+
+    -->
+    <padding
+        android:bottom="@dimen/d3"
+        android:left="@dimen/d10"
+        android:right="@dimen/d10"
+        android:top="@dimen/d3" />
     <!-- 边框的宽度和颜色颜色 -->
     <stroke
         android:width="@dimen/d1"
