--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -1,73 +1,74 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-              android:id="@+id/ll_login"
-              android:layout_width="match_parent"
-              android:layout_height="match_parent"
-              android:background="@color/white"
-              android:orientation="vertical">
+    android:id="@+id/ll_login"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:background="@color/white"
+    android:orientation="vertical">
 
     <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="@dimen/d0"
-            android:layout_weight="1"
-            android:gravity="center|bottom">
+        android:layout_width="match_parent"
+        android:layout_height="@dimen/d0"
+        android:layout_weight="1"
+        android:gravity="center|bottom">
 
         <ImageView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:background="@color/transparent"
-                android:src="@mipmap/icon_bcaas"/>
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:background="@color/transparent"
+            android:src="@mipmap/icon_bcaas" />
     </LinearLayout>
 
     <include
-            layout="@layout/include_edit_text_password"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginLeft="@dimen/d20"
-            android:layout_marginTop="@dimen/d76"
-            android:layout_marginRight="@dimen/d20"/>
+        layout="@layout/include_edit_text_password"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginLeft="@dimen/d20"
+        android:layout_marginTop="@dimen/d76"
+        android:layout_marginRight="@dimen/d20" />
 
     <Button
-            android:id="@+id/btn_unlock_wallet"
-            style="@style/button_style"
-            android:layout_marginTop="@dimen/d30"
-            android:text="@string/unlock"/>
+        android:id="@+id/btn_unlock_wallet"
+        style="@style/button_style"
+        android:layout_marginTop="@dimen/d30"
+        android:text="@string/unlock" />
 
     <RelativeLayout
-            android:layout_width="match_parent"
-            android:layout_height="@dimen/d0"
-            android:layout_marginLeft="@dimen/d12"
-            android:layout_marginTop="@dimen/d20"
-            android:layout_marginRight="@dimen/d12"
-            android:layout_weight="1.3">
+        android:layout_width="match_parent"
+        android:layout_height="@dimen/d0"
+        android:layout_marginLeft="@dimen/d12"
+        android:layout_marginTop="@dimen/d20"
+        android:layout_marginRight="@dimen/d12"
+        android:layout_weight="1.3">
 
         <TextView
-                android:id="@+id/tv_create_wallet"
-                style="@style/black_16_text_style"
-                android:layout_alignParentLeft="true"
-                android:drawableLeft="@mipmap/icon_create_wallet"
-                android:drawablePadding="@dimen/d12"
-                android:gravity="center_vertical"
-                android:text="@string/create_wallet"/>
+            android:id="@+id/tv_create_wallet"
+            style="@style/black_16_text_style"
+            android:layout_alignParentLeft="true"
+            android:drawableLeft="@mipmap/icon_create_wallet"
+            android:drawablePadding="@dimen/d12"
+            android:gravity="center_vertical"
+            android:text="@string/create_wallet" />
 
         <TextView
-                android:id="@+id/tv_import_wallet"
-                style="@style/black_16_text_style"
-                android:layout_alignParentRight="true"
-                android:drawableLeft="@mipmap/icon_import_wallet"
-                android:drawablePadding="@dimen/d12"
-                android:gravity="center_vertical"
-                android:text="@string/import_wallet"/>
+            android:id="@+id/tv_import_wallet"
+            style="@style/black_16_text_style"
+            android:layout_alignParentRight="true"
+            android:drawableLeft="@mipmap/icon_import_wallet"
+            android:drawablePadding="@dimen/d12"
+            android:gravity="center_vertical"
+            android:text="@string/import_wallet" />
 
         <TextView
-                android:id="@+id/tv_version"
-                style="@style/black30_10_text_style"
-                android:layout_height="@dimen/d30"
-                android:layout_alignParentBottom="true"
-                android:layout_centerHorizontal="true"
-                android:layout_gravity="center_horizontal|bottom"
-                android:layout_marginBottom="@dimen/d30"
-                android:gravity="center_horizontal|bottom"/>
+            android:id="@+id/tv_version"
+            style="@style/black30_10_text_style"
+            android:layout_height="@dimen/d48"
+            android:layout_alignParentBottom="true"
+            android:layout_centerHorizontal="true"
+            android:layout_gravity="center_horizontal|bottom"
+            android:layout_marginBottom="@dimen/d30"
+            android:gravity="center_horizontal|bottom"
+            android:minWidth="@dimen/d80" />
 
     </RelativeLayout>
 
