--- a/app/src/main/res/layout/include_header.xml
+++ b/app/src/main/res/layout/include_header.xml
@@ -18,6 +18,7 @@
     <TextView
         android:id="@+id/tv_title"
         style="@style/black_bold_18_text_style"
+        android:layout_height="match_parent"
         android:layout_centerInParent="true"
         android:gravity="center"
         android:padding="@dimen/d5" />
