修改点击改变背景颜色信息

--- a/app/src/main/res/layout/item_transaction.xml
+++ b/app/src/main/res/layout/item_transaction.xml
@@ -6,6 +6,9 @@
     android:paddingTop="@dimen/d8"
     android:paddingBottom="@dimen/d8"
     android:id="@+id/ll_item_transaction"
+    android:clickable="true"
+    android:focusable="true"
+    android:background="@drawable/selector_transaction_item_text"
     android:orientation="horizontal">
 
     <io.bcaas.view.textview.BcaasBalanceTextView
