--- a/app/src/main/res/layout-land/tv_popwindow_show_list.xml
+++ b/app/src/main/res/layout-land/tv_popwindow_show_list.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <io.bcaas.view.tv.MainUpLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/block_base_content"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -32,8 +31,7 @@
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
                 android:layout_margin="@dimen/d10"
-                android:scrollbars="none"
-                tools:listitem="@layout/tv_item_pop_currency_list" />
+                android:scrollbars="none" />
         </LinearLayout>
     </LinearLayout>
 </io.bcaas.view.tv.MainUpLayout>
