--- a/app/src/main/res/layout/item_pop_currency_list.xml
+++ b/app/src/main/res/layout/item_pop_currency_list.xml
@@ -1,21 +1,25 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="@dimen/d40"
-    android:layout_gravity="center">
+    android:layout_height="@dimen/d60"
+    android:layout_gravity="center"
+    android:background="@drawable/selector_transaction_item_text"
+    android:clickable="true"
+    android:focusable="true">
 
     <TextView
         android:id="@+id/tv_content"
         style="@style/black_16_text_style"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:gravity="center"
         android:layout_centerInParent="true"
-        android:ellipsize="middle" />
+        android:ellipsize="middle"
+        android:gravity="center" />
 
     <View
+        android:id="@+id/v_line"
         android:layout_width="match_parent"
-        android:layout_height="@dimen/d0.2"
+        android:layout_height="@dimen/d1"
         android:layout_alignParentBottom="true"
         android:background="@color/black10_1d2124" />
 
