--- a/app/src/main/res/layout/activity_check_wallet_info.xml
+++ b/app/src/main/res/layout/activity_check_wallet_info.xml
@@ -28,9 +28,9 @@
                 android:id="@+id/ib_copy"
                 android:layout_width="@dimen/d32"
                 android:layout_height="match_parent"
+                android:layout_alignTop="@+id/tv_address_key"
                 android:layout_alignBottom="@+id/tv_address_key"
                 android:layout_alignParentRight="true"
-                android:layout_alignTop="@+id/tv_address_key"
                 android:background="@color/transparent"
                 android:src="@mipmap/icon_copy" />
 
@@ -47,8 +47,8 @@
                 android:id="@+id/tv_balance_key"
                 style="@style/black_16_text_style"
                 android:layout_below="@+id/tv_address_key"
-                android:layout_marginBottom="@dimen/d20"
                 android:layout_marginTop="@dimen/d20"
+                android:layout_marginBottom="@dimen/d20"
                 android:text="@string/account_balance" />
 
             <io.bcaas.view.textview.BcaasBalanceTextView
@@ -56,14 +56,15 @@
                 style="@style/black_16_text_style"
                 android:layout_width="match_parent"
                 android:layout_below="@+id/tv_address_key"
-                android:layout_marginBottom="@dimen/d20"
                 android:layout_marginLeft="@dimen/d16"
                 android:layout_marginTop="@dimen/d20"
-                android:layout_toLeftOf="@+id/ll_currency"
+                android:layout_marginBottom="@dimen/d20"
+                android:layout_toLeftOf="@+id/tv_currency"
                 android:layout_toRightOf="@+id/tv_balance_key"
                 android:gravity="center|right"
                 android:textColor="@color/orange_yellow"
                 android:textStyle="bold"
+                android:visibility="gone"
                 tools:text="0" />
 
             <ProgressBar
@@ -71,37 +72,31 @@
                 android:layout_width="@dimen/d20"
                 android:layout_height="@dimen/d20"
                 android:layout_below="@+id/tv_address_key"
-                android:layout_marginBottom="@dimen/d20"
-                android:layout_marginRight="@dimen/d5"
                 android:layout_marginTop="@dimen/d20"
-                android:layout_toLeftOf="@+id/ll_currency"
+                android:layout_marginRight="@dimen/d5"
+                android:layout_marginBottom="@dimen/d20"
+                android:layout_toLeftOf="@+id/tv_currency"
                 android:layout_toRightOf="@+id/tv_balance_key"
                 android:gravity="center|right"
                 android:indeterminateTint="@color/orange_yellow"
                 android:visibility="gone" />
 
-            <LinearLayout
-                android:id="@+id/ll_currency"
+
+            <TextView
+                android:id="@+id/tv_currency"
+                style="@style/black_14_text_style"
                 android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_alignParentRight="true"
                 android:layout_below="@+id/tv_address_key"
+                android:layout_alignParentRight="true"
                 android:layout_marginLeft="@dimen/d10"
-                android:layout_marginTop="@dimen/d20"
-                android:gravity="right|bottom"
-                android:orientation="horizontal">
-
-                <TextView
-                    android:id="@+id/tv_currency"
-                    style="@style/black_14_text_style"
-                    android:layout_width="wrap_content"
-                    android:layout_gravity="bottom"
-                    android:drawablePadding="@dimen/d12"
-                    android:drawableRight="@mipmap/icon_select_red"
-                    android:gravity="bottom"
-                    android:paddingRight="@dimen/d10" />
-
-            </LinearLayout>
+                android:layout_marginTop="@dimen/d10"
+                android:drawableRight="@mipmap/icon_select_red"
+                android:drawablePadding="@dimen/d10"
+                android:gravity="center"
+                android:paddingTop="@dimen/d10"
+                android:paddingRight="@dimen/d10"
+                android:paddingBottom="@dimen/d10"
+                android:text="@string/wait_select_currency" />
 
         </RelativeLayout>
 
@@ -127,16 +122,16 @@
                 layout="@layout/include_edit_text_private_key"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginBottom="@dimen/d20"
-                android:layout_marginTop="@dimen/d16" />
+                android:layout_marginTop="@dimen/d16"
+                android:layout_marginBottom="@dimen/d20" />
         </LinearLayout>
 
         <LinearLayout
             style="@style/bg_white_style"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginBottom="@dimen/d2"
             android:layout_marginTop="@dimen/d2"
+            android:layout_marginBottom="@dimen/d2"
             android:orientation="vertical">
 
 
@@ -154,10 +149,10 @@
             <Button
                 android:id="@+id/btnSendEmail"
                 style="@style/button_style"
-                android:layout_marginBottom="@dimen/d20"
                 android:layout_marginLeft="@dimen/d3"
-                android:layout_marginRight="@dimen/d3"
                 android:layout_marginTop="@dimen/d16"
+                android:layout_marginRight="@dimen/d3"
+                android:layout_marginBottom="@dimen/d20"
                 android:text="@string/send_email" />
         </LinearLayout>
 
