--- a/app/src/main/res/layout/fragment_send.xml
+++ b/app/src/main/res/layout/fragment_send.xml
@@ -1,261 +1,88 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-              xmlns:tools="http://schemas.android.com/tools"
-              android:id="@+id/ll_send"
-              android:layout_width="match_parent"
-              android:layout_height="match_parent"
-              android:scrollbars="vertical">
+    xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/ll_send"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:background="@color/theme_grey"
+    android:orientation="vertical"
+    android:scrollbars="vertical">
 
-    <ScrollView
-            android:id="@+id/sv_send"
-            android:layout_width="match_parent"
+    <RelativeLayout
+        android:id="@+id/rl_amount_info"
+        style="@style/bg_gradual_change_style"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="@dimen/d20"
+        android:background="@mipmap/img_send">
+
+        <TextView
+            android:id="@+id/tv_address_key"
+            style="@style/blue_16_text_style"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="@dimen/d26"
+            android:text="@string/my_account" />
+
+        <ImageButton
+            android:id="@+id/ib_copy"
+            android:layout_width="@dimen/d32"
             android:layout_height="match_parent"
-            android:scrollbars="vertical">
+            android:layout_alignTop="@+id/tv_address_key"
+            android:layout_alignBottom="@+id/tv_address_key"
+            android:layout_alignParentRight="true"
+            android:background="@color/transparent"
+            android:src="@mipmap/icon_copy_white" />
 
-        <RelativeLayout
+
+        <TextView
+            android:id="@+id/tv_account_address_value"
+            style="@style/black_14_text_style"
+            android:layout_below="@+id/tv_address_key"
+            android:layout_marginTop="@dimen/d20"
+            android:ellipsize="middle" />
+
+    </RelativeLayout>
+
+
+    <LinearLayout
+        android:id="@+id/ll_transaction_info"
+        style="@style/bg_white_style"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="@dimen/d14"
+        android:layout_marginBottom="@dimen/d17"
+        android:orientation="vertical"
+        android:paddingLeft="@dimen/d0"
+        android:paddingRight="@dimen/d0">
+
+        <TextView
+            android:id="@+id/tv_transaction_block_title"
+            style="@style/blue_16_text_style"
+            android:layout_marginTop="@dimen/d20"
+            android:paddingLeft="@dimen/d12"
+            android:paddingRight="@dimen/d12"
+            android:text="@string/please_choose" />
+
+        <View
+            android:id="@+id/v_line"
+            android:layout_width="match_parent"
+            android:layout_height="@dimen/d0.5"
+            android:layout_marginTop="@dimen/d16"
+            android:background="@color/black20_1d2124" />
+
+        <android.support.v4.widget.SwipeRefreshLayout
+            android:id="@+id/srl_all_currency"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent">
+
+            <android.support.v7.widget.RecyclerView
+                android:id="@+id/rv_all_currency"
                 android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:layout_marginTop="@dimen/d20"
-                android:background="@color/theme_grey">
-
-            <LinearLayout
-                    android:id="@+id/ll_amount_info"
-                    style="@style/bg_gradual_change_style"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:background="@mipmap/img_send"
-                    android:gravity="center_vertical"
-                    android:orientation="horizontal">
-
-                <TextView
-                        android:id="@+id/tv_address_key"
-                        style="@style/blue_16_text_style"
-                        android:layout_width="@dimen/d0"
-                        android:layout_height="wrap_content"
-                        android:layout_weight="1"
-                        android:gravity="center_vertical"
-                        android:text="@string/my_account"/>
-
-                <RelativeLayout
-                        android:layout_width="@dimen/d0"
-                        android:layout_height="wrap_content"
-                        android:layout_marginBottom="@dimen/d20"
-                        android:layout_marginLeft="@dimen/d16"
-                        android:layout_marginTop="@dimen/d20"
-                        android:layout_toRightOf="@+id/tv_address_key"
-                        android:layout_weight="2.4"
-                        android:gravity="right|center_vertical">
-
-                    <TextView
-                            android:id="@+id/tv_account_address_value"
-                            style="@style/black_14_text_style"
-                            android:layout_alignParentRight="true"
-                            android:ellipsize="middle"
-                            android:gravity="center|right"/>
-
-                    <RelativeLayout
-                            android:layout_width="match_parent"
-                            android:layout_height="wrap_content"
-                            android:layout_below="@+id/tv_account_address_value"
-                            android:layout_marginTop="@dimen/d24">
-
-
-                        <TextView
-                                android:id="@+id/tv_balance_key"
-                                style="@style/black50_12_text_style"
-                                android:layout_width="match_parent"
-                                android:layout_marginRight="@dimen/d10"
-                                android:layout_toLeftOf="@+id/rl_currency"
-                                android:gravity="left"
-                                android:text="@string/balance"
-                                android:textSize="@dimen/text_size_12"/>
-
-
-                        <RelativeLayout
-                                android:id="@+id/rl_currency"
-                                android:layout_width="@dimen/d80"
-                                android:layout_height="wrap_content"
-                                android:layout_alignParentRight="true"
-                                android:layout_gravity="top"
-                                android:gravity="top|right"
-                                android:orientation="vertical">
-
-                            <TextView
-                                    android:id="@+id/tv_currency"
-                                    style="@style/black_14_text_style"
-                                    android:layout_width="wrap_content"
-                                    android:layout_height="wrap_content"
-                                    android:layout_toLeftOf="@+id/btn_select_currency"/>
-
-                            <Button
-                                    android:id="@+id/btn_select_currency"
-                                    android:layout_width="@dimen/d12"
-                                    android:layout_height="@dimen/d12"
-                                    android:layout_alignParentRight="true"
-                                    android:layout_centerVertical="true"
-                                    android:layout_marginLeft="@dimen/d10"
-                                    android:background="@mipmap/icon_select_red"/>
-                        </RelativeLayout>
-
-                        <RelativeLayout
-                                android:layout_width="wrap_content"
-                                android:layout_height="wrap_content"
-                                android:layout_below="@+id/tv_balance_key"
-                                android:layout_gravity="left"
-                                android:layout_marginTop="@dimen/d10"
-                                android:gravity="left">
-
-                            <io.bcaas.view.textview.BcaasBalanceTextView
-                                    android:id="@+id/bbt_balance"
-                                    style="@style/black_14_single_text_style"
-                                    android:layout_width="wrap_content"
-                                    android:ellipsize="end"
-                                    android:gravity="left"
-                                    tools:text="0.000000"/>
-
-                            <ProgressBar
-                                    android:id="@+id/pb_balance"
-                                    android:layout_width="@dimen/d15"
-                                    android:layout_height="@dimen/d15"
-                                    android:layout_marginLeft="@dimen/d5"
-                                    android:layout_marginRight="@dimen/d5"
-                                    android:gravity="left"
-                                    android:indeterminateTint="@color/bcaas_color"
-                                    android:visibility="gone"/>
-                        </RelativeLayout>
-
-                    </RelativeLayout>
-                </RelativeLayout>
-
-            </LinearLayout>
-
-            <RelativeLayout
-                    android:id="@+id/rl_transaction_info"
-                    style="@style/bg_white_style"
-                    android:layout_height="wrap_content"
-                    android:layout_below="@+id/ll_amount_info"
-                    android:layout_marginTop="@dimen/d14"
-                    android:paddingLeft="@dimen/d0"
-                    android:paddingRight="@dimen/d0">
-
-                <TextView
-                        android:id="@+id/tv_transaction_block_title"
-                        style="@style/blue_16_text_style"
-                        android:layout_marginTop="@dimen/d20"
-                        android:paddingLeft="@dimen/d12"
-                        android:paddingRight="@dimen/d12"
-                        android:text="@string/receive_account"/>
-
-                <View
-                        android:id="@+id/v_line"
-                        android:layout_width="match_parent"
-                        android:layout_height="@dimen/d0.5"
-                        android:layout_below="@+id/tv_transaction_block_title"
-                        android:layout_marginTop="@dimen/d16"
-                        android:background="@color/black20_1d2124"/>
-
-                <RelativeLayout
-                        android:layout_width="match_parent"
-                        android:layout_height="match_parent"
-                        android:layout_below="@+id/v_line"
-                        android:layout_marginTop="@dimen/d16"
-                        android:paddingLeft="@dimen/d12"
-                        android:paddingRight="@dimen/d12">
-
-                    <TextView
-                            android:id="@+id/tv_account_address_key"
-                            style="@style/black_16_text_style"
-                            android:text="@string/account_address"/>
-
-                    <ImageButton
-                            android:id="@+id/ib_select_address"
-                            style="@style/ib_style"
-                            android:layout_alignBottom="@+id/tv_account_address_key"
-                            android:layout_alignParentRight="true"
-                            android:src="@mipmap/icon_select_address"/>
-
-                    <RelativeLayout
-                            android:id="@+id/rl_address"
-                            android:layout_width="match_parent"
-                            android:layout_height="wrap_content"
-                            android:layout_below="@+id/tv_account_address_key"
-                            android:gravity="center_vertical"
-                            android:minHeight="@dimen/d44">
-
-                        <EditText
-                                android:id="@+id/et_input_destination_address"
-                                style="@style/black_14_edit_text_style"
-                                android:layout_width="match_parent"
-                                android:layout_height="match_parent"
-                                android:layout_centerVertical="true"
-                                android:layout_marginBottom="@dimen/d16"
-                                android:layout_toLeftOf="@+id/ib_scan_address"
-                                android:digits="@string/private_format"
-                                android:hint="@string/please_enter_receive_account"
-                                android:lineSpacingExtra="@dimen/d3"
-                                android:maxLines="2"/>
-
-                        <ImageButton
-                                android:id="@+id/ib_scan_address"
-                                style="@style/ib_style"
-                                android:layout_alignParentRight="true"
-                                android:layout_centerVertical="true"
-                                android:src="@mipmap/icon_scan_code"/>
-                    </RelativeLayout>
-
-
-                    <View
-                            android:id="@+id/v_line_2"
-                            style="@style/line_style"
-                            android:layout_width="match_parent"
-                            android:layout_below="@+id/rl_address"/>
-
-                    <TextView
-                            android:id="@+id/tv_transaction_amount_key"
-                            style="@style/black_16_text_style"
-                            android:layout_below="@+id/v_line_2"
-                            android:layout_marginTop="@dimen/d16"
-                            android:text="@string/transaction_amount"/>
-
-                    <TextView
-                            android:id="@+id/tv_amount_hint"
-                            style="@style/black30_14_text_style"
-                            android:layout_below="@+id/tv_transaction_amount_key"
-                            android:layout_marginBottom="@dimen/d20"
-                            android:layout_marginTop="@dimen/d16"
-                            android:gravity="bottom"
-                            android:text="@string/please_enter_transaction_amount"/>
-
-                    <EditText
-                            android:id="@+id/et_transaction_amount"
-                            style="@style/orange_yellow_18_bold_single_edit_text_style"
-                            android:layout_width="match_parent"
-                            android:layout_height="wrap_content"
-                            android:layout_below="@+id/tv_transaction_amount_key"
-                            android:layout_marginBottom="@dimen/d20"
-                            android:layout_marginTop="@dimen/d16"
-                            android:background="@color/transparent"
-                            android:digits="@string/amount_edit_digits"
-                            android:inputType="numberDecimal"/>
-                </RelativeLayout>
-            </RelativeLayout>
-
-            <Button
-                    android:id="@+id/btn_send"
-                    style="@style/button_style"
-                    android:layout_below="@+id/rl_transaction_info"
-                    android:layout_marginLeft="@dimen/d10"
-                    android:layout_marginRight="@dimen/d10"
-                    android:layout_marginTop="@dimen/d12"
-                    android:text="@string/send"/>
-
-            <View
-                    android:id="@+id/v_space"
-                    android:layout_width="match_parent"
-                    android:layout_height="@dimen/d20"
-                    android:layout_below="@+id/btn_send"/>
-        </RelativeLayout>
-    </ScrollView>
+                android:layout_height="wrap_content"
+                android:scrollbars="none"
+                tools:listitem="@layout/item_all_currency_list" />
+        </android.support.v4.widget.SwipeRefreshLayout>
+    </LinearLayout>
 </LinearLayout>
 
 
