--- a/app/src/main/res/layout/popwindow_blockservices.xml
+++ b/app/src/main/res/layout/popwindow_blockservices.xml
@@ -22,9 +22,9 @@
             android:layout_height="@dimen/d48"
             android:layout_gravity="center"
             android:gravity="center"
-            android:text="@string/please_choose"
+            android:text="@string/select"
             android:textColor="@color/black_1d2124"
-            android:textSize="@dimen/text_size_17"
+            android:textSize="@dimen/text_size_16"
             android:textStyle="bold" />
 
         <View
