--- a/app/src/main/res/drawable/bg_balance_grey.xml
+++ b/app/src/main/res/drawable/bg_balance_grey.xml
@@ -5,11 +5,11 @@
     <!-- android:radius 弧形的半径 -->
     <corners android:radius="@dimen/d2" />
     <!-- padding：Button里面的文字与Button边界的间隔 -->
-    <padding
-        android:bottom="@dimen/d2"
-        android:left="@dimen/d10"
-        android:right="@dimen/d10"
-        android:top="@dimen/d2" />
+    <!--<padding-->
+        <!--android:bottom="@dimen/d2"-->
+        <!--android:left="@dimen/d10"-->
+        <!--android:right="@dimen/d10"-->
+        <!--android:top="@dimen/d2" />-->
     <!-- 边框的宽度和颜色颜色 -->
     <!-- 背景色 -->
     <solid android:color="@color/grey_cccccc"></solid>
