ChangeLog: 1:扫描跳转页面，如果当前有币种，那么直接跳转到发送信息填写页面 2:首页交易记录点击余额不显示pop 3:send页面点击事件只有点击按钮才触发

--- a/app/src/main/res/layout/item_all_currency_list.xml
+++ b/app/src/main/res/layout/item_all_currency_list.xml
@@ -2,11 +2,10 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:layout_gravity="center"
-    android:background="@drawable/selector_transaction_item_text"
-    android:clickable="true"
-    android:focusable="true">
-
+    android:layout_gravity="center">
+    <!--android:background="@drawable/selector_transaction_item_text"-->
+    <!--android:clickable="true"-->
+    <!--android:focusable="true"-->
     <TextView
         android:id="@+id/tv_name"
         style="@style/black_14_text_style"
@@ -25,6 +24,8 @@
         android:layout_alignParentRight="true"
         android:layout_centerVertical="true"
         android:layout_gravity="center"
+        android:minWidth="@dimen/d64"
+        android:minHeight="@dimen/d24"
         android:layout_marginRight="@dimen/d28"
         android:background="@drawable/tv_stroke_yellow_sec"
         android:gravity="center"
