添加「交易记录」底部加载进度条

--- a/app/src/main/res/layout/fragment_main.xml
+++ b/app/src/main/res/layout/fragment_main.xml
@@ -149,6 +149,17 @@
                 android:scrollbars="none"
                 tools:listitem="@layout/item_transaction" />
         </android.support.v4.widget.SwipeRefreshLayout>
+
+        <ProgressBar
+            android:id="@+id/pb_loading_more"
+            android:layout_width="@dimen/d20"
+            android:layout_height="@dimen/d20"
+            android:layout_alignParentBottom="true"
+            android:layout_centerHorizontal="true"
+            android:layout_marginBottom="@dimen/d5"
+            android:gravity="center"
+            android:indeterminateTint="@color/button_right_color"
+            android:visibility="gone" />
     </RelativeLayout>
 
 
